// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mainPage Проверка наличия в DOM-дереве и соответствия snapshots'ам 1`] = `
<h1
  class="pageTitle"
>
  Главная страница
</h1>
`;

exports[`mainPage Проверка наличия в DOM-дереве и соответствия snapshots'ам 2`] = `
<span>
  Каталог
</span>
`;

exports[`mainPage Проверка наличия в DOM-дереве и соответствия snapshots'ам 3`] = `
<span>
  Админ-панель
</span>
`;

exports[`mainPage Проверка наличия главной страницы в DOM-дереве, с сопуствующей проверкой основных элементов на соответствие сохранённым snapshots'ам 1`] = `
<h1
  class="pageTitle"
>
  Главная страница
</h1>
`;

exports[`mainPage Проверка наличия главной страницы в DOM-дереве, с сопуствующей проверкой основных элементов на соответствие сохранённым snapshots'ам 2`] = `
<span>
  Каталог
</span>
`;

exports[`mainPage Проверка наличия главной страницы в DOM-дереве, с сопуствующей проверкой основных элементов на соответствие сохранённым snapshots'ам 3`] = `
<span>
  Админ-панель
</span>
`;
